fix: enhance letter styling for better layout and readability

--- a/css/letter-css.css
+++ b/css/letter-css.css
@@ -1,12 +1,13 @@
 
 #letter {
-    color: #000;
     font: 1.5em 'EduAUVICWANTHand';
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 100%;
-    letter-spacing: 0.45px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    font-weight: bold;
+    margin: 10px;
+    font-size: medium;
 }
 
 .line {
